# keymaster-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
crates/backend/: Cargo.toml  cookies  sqlx-data.json
crates/backend/migrations/: 20220723014037_create_tables.sql
crates/backend/src/: lib.rs  main.rs  models.rs  routes.rs
crates/backend/src/fixtures/: users.sql
crates/backend/src/models/: assignment.rs  key.rs  mod.rs  session.rs  user.rs
crates/backend/src/models/fixtures/: assignments.sql  keys.sql  users.sql
crates/backend/src/routes/: assignments.rs  keys.rs  mod.rs  users.rs
crates/backend/src/routes/fixtures/: users.sql
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: components.rs  error.rs  main.rs  nav.rs  routes.rs  theme.rs  types.rs
crates/frontend/src/components/: details_card.rs  form.rs  mod.rs  modal.rs  nav.rs  nav2.rs  notifier.rs  session_provider.rs  table.rs  user_context_provider.rs
crates/frontend/src/hooks/: mod.rs  use_user_context.rs
crates/frontend/src/routes/: assignments.rs  auth.rs  forms.rs  home.rs  keys.rs  login.rs  mod.rs  new.rs  new_item.rs  table.rs  users.rs
crates/frontend/src/services/: auth.rs  form_actions.rs  mod.rs  requests.rs
crates/frontend/static/: style.css  tailwind1.css  tailwind2.css  tailwind3.css
migrations/: 20220723014037_create_tables.sql
src/: main.rs  models.rs  nav.rs  routes.rs
src/models/: key.rs
src/routes/: login.rs
