[package]
name = "keymaster-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
# sqlx = { version = "0.5", features = [  "runtime-async-std-native-tls", "postgres" ] }
# async-std = { version = "1", features = [ "attributes" ] }
