[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["postgres", "runtime-actix-rustls"] }
async-std = { version = "1", features = [ "attributes" ] }
sqlx-rt = { version = "0.6.0", features = ["runtime-actix-rustls"] }
anyhow = "1.0.58"
