[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.1", features = [
  "time",
  "migrate",
  "postgres",
  "runtime-actix-rustls",
] }
sqlx-rt = { version = "0.6.1", features = ["runtime-actix-rustls"] }
anyhow = "1.0.58"
dotenvy = "0.15.1"
time = "0.3.12"
actix-web = "4.1.0"
serde = { version = "1.0.142", features = ["derive"] }
