[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.1", features = ["migrate", "postgres", "runtime-actix-rustls", "chrono", "offline"] }
sqlx-rt = { version = "0.6.1", features = ["runtime-actix-rustls"] }
anyhow = "1.0.58"
dotenvy = "0.15.1"
actix-web = { version = "4.1.0", features = ["cookie"] }
actix-session = { version = "0.7.1", features = ["cookie-session"] }
orion = { version = "0.17.1", features = ["serde"] }
serde = { version = "1.0.142", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
chrono = { version = "0.4.20", features = ["serde"] }
pwgen = "0.1.2"
validator = { version = "0.16.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.6.0"
actix-web-lab = "0.17.0"
