[package]
name = "frontend"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.21", features = ["serde"] }
log = "0.4.17"
reqwasm = "0.5.0"
serde = { version = "1.0.143", features = ["derive"] }
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2.0"
web-sys = "0.3.59"
yew = "0.19.3"
yew-router = "0.16.0"
