[package]
name = "frontend"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.21", features = ["serde"] }
gloo-net = "0.2.3"
log = "0.4.17"
reqwasm = "0.5.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.59", features = ["Event", "FocusEvent"] }
yew = "0.19.3"
yew-agent = "0.1.0"
yew-router = "0.16.0"
yewdux = "0.7.0"
